# src/main/kotlin/uk/co/eelpieconsulting/feedlistener/controllers/SubscriptionCreateRequest.kt
@@ -1,0 +1,3 @@
+package uk.co.eelpieconsulting.feedlistener.controllers
+
+data class SubscriptionCreateRequest (val url: String, val channel: String, val name: String?)
